fixed errors in tests created from previous commit